samples/_failures_safe/1761317931_f9be20_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_072d0889.c: In function ‘main’:
./samples/SAFE/__tmp_072d0889.c:182:30: error: missing terminating " character
  182 |         input[strcspn(input, "\
      |                              ^~
./samples/SAFE/__tmp_072d0889.c:182:9: error: expected expression at end of input
  182 |         input[strcspn(input, "\
      |         ^~~~~
./samples/SAFE/__tmp_072d0889.c:182:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_072d0889.c:182:9: error: expected declaration or statement at end of input
